test/assets/invalid/where/expect-char.hs
import Data.Char (isSpace)

a = isSpace b
    where b = "a"